@@ -27,6 +27,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #4681: Allow mmap() to work on file sizes and offsets larger than
+  4GB, even on 32-bit builds.  Initial patch by Ross Lagerwall, adapted for
+  32-bit Windows.
+
 - Issue #11169: compileall module uses repr() to format filenames and paths to
   escape surrogate characters and show spaces.
 
